home logo fixed position on small screens

--- a/public/styles/main.less
+++ b/public/styles/main.less
@@ -144,9 +144,12 @@
 body {
   height: 0px;
   width: 100%;
+  min-height: 415px;
 }
 html, body {
   margin: 0;
+  min-height: 415px;
+
   //overflow: hidden !important;
   font-family: 'Arial Regular'
 }
@@ -597,6 +600,15 @@ nav li {
   margin-right: auto;
   width: 78%;
   position: relative;
+}
+@media screen and (max-height: 415px) {
+  #home-logo {
+    position: fixed;
+    display: block;
+    width: 106%;
+    margin-left: -3%;
+    top: 300px;
+  }
 }
 @media screen and (max-width: 1000px) {
   .page-home.cover-image {
